--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 layout: post
 title: Homepage
 ---
-        <section id="main_content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<section id="main_content">
+  {% for post in paginator.posts %}
+    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    <span>{{ post.date | date_to_string }}</span>
+    <p>{{ post.excerpt }}</p>
+  {% endfor %}
 
-	{% for post in site.posts limit: 5 %}
-		{{post.title}}
-	{% endfor %}
-       </section>
+  <div class="pagination">
+    {% if paginator.previous_page %}
+      <a href="/page/{{ paginator.previous_page }}" class="previous">Previous</a>
+    {% else %}
+      <span class="previous">Previous</span>
+    {% endif %}
+    <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+    {% if paginator.next_page %}
+      <a href="/page/{{ paginator.next_page }}" class="next">Next</a>
+    {% else %}
+      <span class="next ">Next</span>
+    {% endif %}
+  </div>
+</section>
