--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: post
 title: Homepage
 ---
+JUST A TEST!!!!!!
 <section id="main_content">
   {% for post in paginator.posts %}
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
