--- a/index.html
+++ b/index.html
@@ -13,15 +13,29 @@ title: Homepage
   <div class="pagination">
     {% if paginator.total_pages > 1 %}
       {% if paginator.previous_page %}
-        <a href="/page/{{ paginator.previous_page }}" class="previous">Previous</a>
+	{% if paginator.previous_page == 1 %}
+	  <a href="/index.html" class="page-numbers">&laquo; Previous</a>
+	{% else %}
+	  <a href="/page/{{ paginator.previous_page }}" class="page-numbers">&laquo; Previous</a>
+	{% endif %}
       {% else %}
-        <span class="previous">Previous</span>
+        <span class="page-numbers">&laquo; Previous</span>
       {% endif %}
-      <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+
+      {% for page in (1..paginator.total_pages) %}
+      	{% if page == paginator.page %}
+	  <span class="page-numbers current">{{ page }}</span>
+	{% elsif page == 1 %}
+	  <a href="/index.html" class="page-numbers">{{ page }}</a>
+	{% else %}
+	  <a href="/page/{{ page }}" class="page-numbers">{{ page }}</a>
+	{% endif %}
+      {% endfor %}
+
       {% if paginator.next_page %}
-        <a href="/page/{{ paginator.next_page }}" class="next">Next</a>
+	 <a href="/page/{{ paginator.next_page }}" class="page-numbers">Next &raquo;</a>
       {% else %}
-        <span class="next ">Next</span>
+        <span class="page-numbers">Next &raquo;</span>
       {% endif %}
     {% endif %}
   </div>
