Working more on draft.

--- a/_drafts/mentoring-management-and-professionalism.html
+++ b/_drafts/mentoring-management-and-professionalism.html
@@ -1,7 +1,7 @@
 ---
-  title: Mentoring, Management And Professionalism: A Tale
-  layout: post
-  comments: tre
+layout: post
+title: Mentoring, Management And Professionalism&#58; A Tale
+comments: true
 ---
 
 <p>Once upon a time, there was a developer who had recently graduated college. He was a confident and charismatic young lad who liked to think about and attempt to solve challenging problems. He was te type of go-getter that companies love. And he was on a team of senior developers who were mentoring him. It was a perfect situation. But it fell apart.</p>
@@ -19,3 +19,13 @@
 -----
 
 <p>This story has no conclusion. It doesn't matter if it's fiction or non-fiction, similar situations occur all the time. What I plan to do is to elaborate on what I see are the problem points in this scenario and they'd be addressed in an ideal world. I would love to hear more opinions in the comments as to what problems you see, how you'd address them, etc. So without further ado, here's my take.</p>
+
+<p>I'm going to group the mistakes I see into categories. The first category I see are the actions of the junior developer. And in that category, I believe there to be a few big issues.</p>
+
+<p>Having confidence outweigh your level of expertise is quite a common scenario for young developers. I know I was guilty of that. It's so normal that I'd almost consider NOT adding this to the list of mistakes. But it is the problem. The actions are the symptoms. Casting aside the guidance of your mentors and actively looking to get away from them - those are symptoms of the problem. They're often subconcious acts to remove people who are challenging your view of yourself. But I cannot stress enough how important it is to growing to be challenged. You learn as much from your mistakes as you do your successes. I know, from experience, that the way I went from "thinking I know it all" to "realizing I don't know anything" is by having long disagreements with my mentors. These are the people who challenged my assumptions and forced me to think. They hold a special place in my heart for guiding me through the early part of my career.</p>
+
+<p>The second mistake the junior developer made is a lack of professionalism. When he passed the buck in his response to the client, that shows a lack of responsibility. There are no two ways about it. There are a lot of lessons to be learned from maintaining and fixing code that you wrote. Lessons that books don't teach - only experience. To shirk away from those lessons makes you prone to repeat them again.</p>
+
+<p>The other category of mistakes are more on the management side. In most cases, they complement or enable the developers' mistakes.</p>
+
+<p>
