--- a/_posts/2013-11-20-my-thoughts-on-pair-programming-the-good.html
+++ b/_posts/2013-11-20-my-thoughts-on-pair-programming-the-good.html
@@ -2,6 +2,7 @@
   title: My Thoughts On Pair Programming&#58; The Good
   layout: post
   comments: true
+  excerpt: <p>I figured I'd start the series with the benefits that I've seen with pair programming over the past year and where it seems to work well.</p>
 ---
 
 {% include pairing-series-nav.html %}
