Update excerpt of latest post.

--- a/_posts/2014-02-03-intro-to-extension-methods.html
+++ b/_posts/2014-02-03-intro-to-extension-methods.html
@@ -2,6 +2,7 @@
 layout: post
 title: Intro To Extension Methods
 comments: true
+excerpt: <p>Extension methods are features of C# which allow you to add methods to classes without modifying the original type.</p>
 ---
 
 {% include rigo-notice.html %}
