Add new lambda methods posts.

--- a/_posts/2014-02-04-from-delegates-to-lambdas-pt-1-whats-a-delegate.html
+++ b/_posts/2014-02-04-from-delegates-to-lambdas-pt-1-whats-a-delegate.html
@@ -6,6 +6,7 @@ excerpt: <p>I'm going to take the next few blog posts to explain lambda expressi
 ---
 
 {% include rigo-notice.html %}
+{% include lambdas-series-nav.html %}
 
 <p>I'm going to take the next few blog posts to explain lambda expressions (and delegates) - something we use every day as LINQ users. But it's important to know what they are and why they're useful, beyond just knowing that the way to get a DB record matching a certain Id is by writing <strong><em>x =&gt; x.Id == 42</em></strong>. Hopefully these posts will start to get some thoughts going about other ways that lambdas could be used.</p>
 
