--- a/_posts/2014-02-04-from-delegates-to-lambdas-pt-4-dotnet-helpers.html
+++ b/_posts/2014-02-04-from-delegates-to-lambdas-pt-4-dotnet-helpers.html
@@ -2,10 +2,15 @@
 layout: post
 title: From Delegates To Lambdas, Pt. 4 - .NET Helpers
 comments: true
+excerpt: <p>The final  post in my series on lambda expressions, looking at some .NET library helpers that make using lambdas even easier.</p>
 ---
+
+{% include rigo-notice.html %}
+{% include lambdas-series-nav.html %}
+
 <p>Ok - this is the last part of my series about delegates and lambdas. Finally. But I wanted to mention a few helpers that .NET provides to make it easier to use delegates and lambdas in your code.</p>
 
-<p>If you remember back to the <a href="2014/02/03/from-delegates-to-lambdas-pt-1-whats-a-delegate.html">first post</a> of the series, I mentioned that to declare a delegate to be used as a parameter or anything else, you had to do this:</p>
+<p>If you remember back to the <a href="2014/02/04/from-delegates-to-lambdas-pt-1-whats-a-delegate.html">first post</a> of the series, I mentioned that to declare a delegate to be used as a parameter or anything else, you had to do this:</p>
 
 <script src="https://gist.github.com/ddonahue/133ed456895621f395a6.js"></script>
 
