--- a/_posts/2014-02-18-refactoring-switch-statements-to-reduce-cyclomatic-complexity.html
+++ b/_posts/2014-02-18-refactoring-switch-statements-to-reduce-cyclomatic-complexity.html
@@ -2,6 +2,7 @@
 layout: post
 title: Refactoring Switch Statements To Reduce Cyclomatic Complexity
 comments: true
+excerpt: <p>Switch statements are used a lot in code. They're certainly a way to make what would otherwise be a long IF-ELSE IF statement more readable. But there are a few problems with them (and IF-ELSE IF statements for that matter).</p>
 ---
 
 {% include rigo-notice.html %}
