Work on new draft. Add new includes.

--- a/_drafts/2015-10-13-ricketts-glen.html
+++ b/_drafts/2015-10-13-ricketts-glen.html
@@ -4,18 +4,20 @@ title: Ricketts Glen Waterfalls
 comments: true
 share: true
 category: personal
+images: 
+  - preview: https://farm6.staticflickr.com/5764/21530766543_55f9983108_s.jpg
+    feature: https://farm6.staticflickr.com/5764/21530766543_7cbb7801e0_h.jpg
+
+  - preview: https://farm6.staticflickr.com/5659/22162066121_8d815f4c14_s.jpg
+    feature: https://farm6.staticflickr.com/5659/22162066121_5b270ebe50_h.jpg
+
+  - preview: https://farm1.staticflickr.com/760/22151861705_394fc5024d_s.jpg
+    feature: https://farm1.staticflickr.com/760/22151861705_b43d9e1f33_h.jpg
+
+  - preview: https://farm1.staticflickr.com/743/21964026148_2dccc2074b_s.jpg
+    feature: https://farm1.staticflickr.com/743/21964026148_140624f632_h.jpg
+
+song: https://embed.spotify.com/?uri=spotify%3Atrack%3A3RiQYb62kdgnLEcfN6sEmO
 ---
 
-<figure>
-  <a href="/images/2015-05-30-ricketts-glen/2.jpg"><img src="/images/2015-05-30-ricketts-glen/2.jpg"/></a>
-</figure>
-
 <p>Write stuff here</p>
-
-// TODO: Make this an include file? Pass list of photos in view YAML Front-Matter?
-// Use flickr
-<h3>Photos</h3>
-<div class="popup-gallery">
-  <a href="/images/2015-05-30-ricketts-glen/1.jpg"><img src="/images/2015-05-30-ricketts-glen/1.jpg" height="75" width="75"/></a>
-</div>
-
