Update post to have main image.

--- a/_posts/2015-10-14-waterfalls-at-ricketts-glen-state-park-pa.html
+++ b/_posts/2015-10-14-waterfalls-at-ricketts-glen-state-park-pa.html
@@ -5,9 +5,6 @@ comments: true
 share: true
 category: personal
 images: 
-  - preview: https://farm6.staticflickr.com/5764/21530766543_55f9983108_s.jpg
-    feature: https://farm6.staticflickr.com/5764/21530766543_7cbb7801e0_h.jpg
-
   - preview: https://farm6.staticflickr.com/5659/22162066121_8d815f4c14_s.jpg
     feature: https://farm6.staticflickr.com/5659/22162066121_5b270ebe50_h.jpg
 
@@ -19,6 +16,10 @@ images:
 
 song: https://embed.spotify.com/?uri=spotify%3Atrack%3A3RiQYb62kdgnLEcfN6sEmO
 ---
+
+<figure>
+  <a href="https://farm6.staticflickr.com/5764/21530766543_7cbb7801e0_h.jpg"><img src="https://farm6.staticflickr.com/5764/21530766543_55f9983108_c.jpg"></a>
+</figure>
 
 <p>For my 36th birthday, I decided I wanted to see some waterfalls. Steph and I did some research and learned about <a href="http://www.dcnr.state.pa.us/stateparks/findapark/rickettsglen/" target="_new">Ricketts Glen State Park</a> - only a few hours from our home in Philadelphia. So we decided to check it out.</p>
 
