Publish new post

--- a/_posts/2015-10-19-glacier-walk-at-nigardsbreen-norway.html
+++ b/_posts/2015-10-19-glacier-walk-at-nigardsbreen-norway.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Glacier Walk at Nigardsbreen in Norway
+title: Glacier Walk at Nigårdsbreen in Norway
 comments: true
 share: true
 category: personal
@@ -32,6 +32,8 @@ song: https://embed.spotify.com/?uri=spotify%3Atrack%3A73vyulFUPAla99D1wUtMQo
 
 <p>Our glacier walk was overseen by a tour group. They give you little crampons to put over your shoes and they tie about thirty people together. We were the last two in that line. I don't know if that gave me any more responsibility, or put me in any more risk, but I was amused at the prospect. We only booked a one-hour walk, but there were five and eight hour options. That seems like a lot of time to me, but I guess they do a little ice cave exploring and other stuff. In hindsight, it may have been pretty cool to do a longer walk. It may have also helped a person appreciate the enormity of the glacier if, like the ocean, you got to the point where all you could see around you was glacier.</p>
 
-<p>Truth be told, I could take or leave actually walking upon the glacier. It's one of those things that sounds really cool to say, but in reality, it was just like walking on some snowy ice. I think just being able to be near the glacier was awe-inspiring though. It's the end of July and there's this monumental hunk of ice before you. Plus - the scenery around it is breathtaking. You realize you're in a valley carved out by this slowly moving piece of ice. The lake at the bottom was created by the melting of the glacier. In fact, all of the fjords you're seeing were in some way shaped by this thing. It's easy to get caught up in all of that.</p>
+<p>Truth be told, I could take or leave actually walking upon the glacier. It's one of those things that sounds really cool to tell someone about, but in reality, it was just like walking on some snowy ice. The top layer is mostly white and covered in grime because of all the tours (guilty as charged), but when you look at some of the untouched parts you see impossibly blue ice. The best part of the walk was when I could stop briefly to turn around and look back at the valley (see picture below). Unforgettably beautiful.</p>
 
-<p>I chose <em>Falling Snow</em> by <strong>Agalloch</strong> as the music for this post. I don't think you have to think too hard about why. The song is both beautiful and brooding. The landscape of the glacier certainly was not brooding, but the name unlocks a key about its destructive nature. Nigardsbreen </p>
+<p>Otherwise, I think just being able to be near the glacier was awe-inspiring enough. It's the end of July and there's this monumental hunk of ice before you. Plus - the scenery around it is breathtaking. You realize you're in a valley carved out by this slowly moving piece of ice. The lake at the bottom was created by the melting of the glacier. In fact, all of the fjords you're seeing were in some way shaped by this thing. It's easy to get caught up in all of that.</p>
+
+<p>I chose <em>Falling Snow</em> by <strong>Agalloch</strong> as the music for this post. I don't think you have to think too hard about why. The song is both beautiful and brooding. The landscape of the glacier certainly was not brooding, but the name unlocks a key about its destructive nature. Nigårdsbreen - in Norwegian, <em>ni</em> is nine and <em>gård</em> is farm. This glacier arm was named for the farm it spared after destroying eight farms further up the valley in which it lays.</p>
