Add excerpts to new posts.

--- a/_posts/2015-10-14-waterfalls-at-ricketts-glen-state-park-pa.html
+++ b/_posts/2015-10-14-waterfalls-at-ricketts-glen-state-park-pa.html
@@ -15,6 +15,7 @@ images:
     feature: https://farm1.staticflickr.com/743/21964026148_140624f632_h.jpg
 
 song: https://embed.spotify.com/?uri=spotify%3Atrack%3A3RiQYb62kdgnLEcfN6sEmO
+excerpt: <p>For my 36th birthday, I decided I wanted to see some waterfalls. Steph and I did some research and learned about Ricketts Glen State Park.</p>
 ---
 
 <figure>
