--- a/_posts/2015-10-19-glacier-walk-at-nigardsbreen-norway.html
+++ b/_posts/2015-10-19-glacier-walk-at-nigardsbreen-norway.html
@@ -12,6 +12,7 @@ images:
     feature: https://farm6.staticflickr.com/5647/22241120831_c2427a5124_h.jpg
 
 song: https://embed.spotify.com/?uri=spotify%3Atrack%3A73vyulFUPAla99D1wUtMQo
+excerpt: <p>One of the highlights of our trip to Norway this past Summer was walking on a glacier.</p>
 ---
 
 <figure>
