--- a/_posts/2015-10-19-glacier-walk-at-nigardsbreen-norway.html
+++ b/_posts/2015-10-19-glacier-walk-at-nigardsbreen-norway.html
@@ -12,16 +12,16 @@ images:
     feature: https://farm6.staticflickr.com/5647/22241120831_c2427a5124_h.jpg
 
 song: https://embed.spotify.com/?uri=spotify%3Atrack%3A73vyulFUPAla99D1wUtMQo
-excerpt: <p>One of the highlights of our trip to Norway this past Summer was walking on a glacier.</p>
+excerpt: <p>One of the highlights of our trip to Norway this past summer was walking on a glacier.</p>
 ---
 
 <figure>
   <a href="https://farm1.staticflickr.com/689/22204653656_ff84a4f9fd_h.jpg"><img src="https://farm1.staticflickr.com/689/22204653656_ff84a4f9fd_c.jpg"></a>
 </figure>
 
-<p>One of the highlights of our trip to Norway this past Summer was walking on a glacier.</p>
+<p>One of the highlights of our trip to Norway this past summer was walking on a glacier.</p>
 
-<p>What made it all the better is that we stumbled into this adventure. I've had an obsession with Scandinavia since I was in my early teens. When it came time to plan our Summer vacation, I kept saying "I want to swim in a fjord, I want to swim in a fjord" (which I did, and it was freezing, but that's a story for another time). I'd seen pictures of fjords and was stunned by their beauty so we found a little cabin in the Sognefjord area of Norway and booked it for a few days. The only problem was that besides seeing fjords, we didn't really know what we were going to do during those days.</p>
+<p>What made it all the better is that we stumbled into this adventure. I've had an obsession with Scandinavia since I was in my early teens. When it came time to plan our summer vacation, I kept saying, "I want to swim in a fjord, I want to swim in a fjord" (which I did, and it was freezing, but that's a story for another time). I'd seen pictures of fjords and was stunned by their beauty so we found a little cabin in the Sognefjord area of Norway and booked it for a few days. The only problem was that besides seeing fjords, we didn't really know what we were going to do during that time.</p>
 
 <p>Luckily when we arrived at the cabin, there were a bunch of pamphlets for nearby activities at the front desk. One of them mentioned a glacier walk. It was only about 30 minutes away so we decided to go for it.</p>
 
@@ -29,7 +29,7 @@ excerpt: <p>One of the highlights of our trip to Norway this past Summer was wal
 
 <p>Actually getting to the face of the glacier was an adventure in itself. If you look at the one picture below, taken from the car window at the parking area, you're still a thirty minute boat ride, or an hour's walk, away. It seems close because you can see the glacier pretty clearly, but we didn't have a full appreciation of just how large the glacier was and how that makes everything else look small in comparison.</p>
 
-<p>The walk was beautiful and treacherous. You're surrounded by waterfalls and some very, very blue water that is being supplied by the glacier. You're also climbing over boulders and little wooden suspension bridges like you see in movies. After walking for about thirty minutes through foliage, you get to nothing but boulders and you assume that the clearing means you're there. Not so fast. You have to hop over crags and more boulders for about another 30 minutes.</p>
+<p>The walk was both beautiful and treacherous. You're surrounded by waterfalls and some very, very blue water that is being supplied by the glacier. You're also climbing over boulders and little wooden suspension bridges like you see in movies. After walking for about thirty minutes through foliage, you get to nothing but boulders and you assume that the clearing means you're there. Not so fast. You have to hop over crags and more boulders for about another 30 minutes.</p>
 
 <p>Our glacier walk was overseen by a tour group. They give you little crampons to put over your shoes and they tie about thirty people together. We were the last two in that line. I don't know if that gave me any more responsibility, or put me in any more risk, but I was amused at the prospect. We only booked a one-hour walk, but there were five and eight hour options. That seems like a lot of time to me, but I guess they do a little ice cave exploring and other stuff. In hindsight, it may have been pretty cool to do a longer walk. It may have also helped a person appreciate the enormity of the glacier if, like the ocean, you got to the point where all you could see around you was glacier.</p>
 
