Add new blog post.

--- a/_drafts/how-i-accidently-got-into-hiking.html
+++ b/_drafts/how-i-accidently-got-into-hiking.html
@@ -14,4 +14,4 @@ images:
 #song: https://embed.spotify.com/?uri=spotify%3Atrack%3A73vyulFUPAla99D1wUtMQo
 ---
 
-<p>Write post here</p>
+<p>First off - I'm sorry for the linkbait-y title of this post. I actually hate myself a little bit for writing it, but I couldn't think of anything more appropriate.</p>
