--- a/_drafts/the-fallacy-of-old-code.html
+++ b/_drafts/the-fallacy-of-old-code.html
@@ -9,3 +9,7 @@ category: professional
 <p>Re-tell the story of the haiku comment in a 300-line method with nested IFs and multiple switch statements. When you mentioned the comment being unhelpful, a co-worker responded "jeez, even old code isn't safe from scrutiny." But what does old code really mean? It's still part of the app. It still runs. We are in this file, trying to change this 300-line method TODAY so is it really old? Is that just an excuse?</p>
 
 <p>Reference the two famous quotes... 'write code as though the next person maintaining is a psycopath who knows where you live." http://c2.com/cgi/wiki?CodeForTheMaintainer</p>
+
+NOTE:
+- Your code doesn't age while its sitting in source control repo. It's not like the code actively gets worse as it sits around. It's quality is determined at time of writing and again with each future change. That's important because the quality can actually go up OR down.
+- "Temporal immunity": like diplomatic immunity, but based on a length of time.
