Finish new draft.

--- a/_drafts/the-fallacy-of-old-code.html
+++ b/_drafts/the-fallacy-of-old-code.html
@@ -14,11 +14,13 @@ category: professional
 
 <p>It's over 300 lines long with nested if statements, multiple switch statements and yes, that comment was actually in there verbatim.</p>
 
-<p>The developers mentioned in our developers Slack channel that the comment was unhelpful and another developer responded: "Wow! Even <strong></strong>old code</strong> isn't immune to critical scrutiny."</p>
+<p>The developers mentioned in our developers Slack channel that the comment was unhelpful and another developer responded: "Wow! Even <em>old code</em> isn't immune to critical scrutiny."</p>
 
 <h2>What Is Old?</h2>
 
 <p>I started thinking about that statement: <strong>old code</strong>. What does it mean? When that method was written, it was brand new. Code does not age while it sits idly in a version control system or runs on your server. The only time it ages, per se, is when a developer changes it. And unlike us humans, it can actually get worse OR better over time.</p>
+
+<p>Furthermore - when you write some code, how likely are you to know how long it will live? In some cases, you may know that what you're doing is one-time throwaway code. I still wouldn't advocate writing it carelessly, but at least you know if you do, the potential risk is minimized. In all other cases, you should assume that the code you are writing is going to stick around in some form or another for a long time. And over long enough time, the chances of it needing to be changed will grow.</p>
 
 <h2>Code For The Maintainer</h2>
 
@@ -29,3 +31,5 @@ category: professional
 <p>Or the much more upbeat version:</p>
 
 <blockquote>Always code in such a way that if someone a few notches junior picks up the code, they will take pleasure in reading and learning from it.</blockquote>
+
+<p>The point of both is the same. Write your code thinking about the future. If you do that, it will be likely that your code past from the past will come back to bite you.</p>
