--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,7 @@ title: About Me
 tags: [about]
 comments: false
 share: false
-#image:
-#  feature: sample-image-2.jpg
-#  credit: WeGraphics
-#  creditlink: http://wegraphics.net/downloads/free-ultimate-blurred-background-pack/
+category: about
 ---
 
 <p>Music is my first passion. I play guitar. I write music and have a small home studio for recording. I'm also fanatical about discovering new music and going to concerts.</p>
