Add Jekyll frontmatter to newest drafts.

--- a/_drafts/code-coverage-vs-bugs.html
+++ b/_drafts/code-coverage-vs-bugs.html
@@ -1,3 +1,11 @@
+---
+layout: post
+title: Code Coverage vs. Number Of Bugs
+comments: true
+share: true
+category: professional
+---
+
 Blog about this tweet from Ron Jeffries. https://twitter.com/RonJeffries/status/664832355526385664
 
 Mostly about how 45% is the right answer playing the odds, but get into the nitty gritty.
