--- a/_drafts/which-design-is-preferable.html
+++ b/_drafts/which-design-is-preferable.html
@@ -1,3 +1,11 @@
+---
+layout: post
+title: Which Design Is Preferable?
+comments: true
+share: true
+category: professional
+---
+
 Use a method to update an object
 https://gist.github.com/ddonahue/3f05c9c3029a5a48c58b
 
