Updates About page

--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@ category: about
 ---
 
 <p>Music is my first passion. I play guitar. I write music and have a small home studio for recording. I'm also fanatical about discovering new music and going to concerts.</p>
-<p>I love to travel. I'm fascinated by nature and castles. I like to hike and ride my bike. And most of all, I enjoy doing all of these things with my fiancée, Stephanie.</p>
-<p>I'm fascinated by Europe, and Scandinavia in particular. The culture, the sights, the music and the history. I'm currently reading The Kalevala, having recently finished many of the Icelandic sagas.</p>
+<p>I love to travel. I'm fascinated by nature and castles. I like to hike and ride my bike. And most of all, I enjoy doing all of these things with my wife, Stephanie.</p>
+<p>I'm fascinated by Europe, and Scandinavia in particular. The culture, the sights, the music and the history.</p>
 <p>I play ice hockey. I'm an avid Philadelphia Flyers fan.</p>
 <p>And I like to cook.</p>
 
