Renames blog post

--- a/_posts/2017-10-13-releasing-software-is-not-religion.html
+++ b/_posts/2017-10-13-releasing-software-is-not-religion.html
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Releasing Code Is Not Religion
+title: Releasing Software Is Not Religion
 comments: true
 share: true
 category: professional
 ---
 
-<p>Getting code from your development machine to production so that your customers can start using it is not a religious experience.</p>
+<p>Getting software from your development machine to production so that your customers can start using it is not a religious experience.</p>
 
 <p>What I mean here is that you cannot, and should not, be hoping or praying that your release will go smoothly and that no bugs will have made it to your users. You cannot will a release to go well with more checkpoint meetings, more manual process. There is no luck when it comes to building and releasing quality software.</p>
 
