Updates formatting of last blog post.

--- a/_posts/2018-05-20-cohesion-and-coupling-presentation.html
+++ b/_posts/2018-05-20-cohesion-and-coupling-presentation.html
@@ -6,7 +6,7 @@ share: true
 category: professional
 ---
 
-<p>I had the pleasure of giving a talk at <a href="https://www.meetup.com/PhillyXP/" target="_blank">PhillyXP</a>'s May meetup. The topic of the talk was Cohesion and Coupling - The Keys To Changing Your Code With Confidence.</p>
+<p>I had the pleasure of giving a talk at <a href="https://www.meetup.com/PhillyXP/" target="_blank">PhillyXP</a>'s May meetup. The topic of the talk was <em>Cohesion and Coupling - The Keys To Changing Your Code With Confidence</em>.</p>
 
 <p>The slide deck is available at: <a href="https://speakerdeck.com/deathmetaldan13/cohesion-and-coupling-the-keys-to-changing-your-code-with-confidence" target="_blank">https://speakerdeck.com/deathmetaldan13/cohesion-and-coupling-the-keys-to-changing-your-code-with-confidence</a></p>
 <p>The demo code from the talk is available at: <a href-"https://github.com/ddonahue/LooseCouplingDemo" target="_blank">https://github.com/ddonahue/LooseCouplingDemo</a></p>
